@@ -24,14 +24,13 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ConcurrentMap;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Ordering;
-import com.google.common.primitives.Primitives;
+import com.github.benmanes.caffeine.cache.Caffeine;
 import org.apache.calcite.DataContext;
 import org.apache.calcite.adapter.enumerable.EnumUtils;
 import org.apache.calcite.linq4j.function.Function1;
@@ -65,6 +64,7 @@ import org.apache.ignite.internal.processors.query.calcite.exec.exp.agg.Aggregat
 import org.apache.ignite.internal.processors.query.calcite.type.IgniteTypeFactory;
 import org.apache.ignite.internal.processors.query.calcite.util.Commons;
 import org.apache.ignite.internal.processors.query.calcite.util.IgniteMethod;
+import org.apache.ignite.internal.processors.query.calcite.util.Primitives;
 
 import static org.apache.ignite.internal.util.CollectionUtils.nullOrEmpty;
 
@@ -73,8 +73,14 @@ import static org.apache.ignite.internal.util.CollectionUtils.nullOrEmpty;
  * Each expression compiles into a class and a wrapper over it is returned.
  */
 public class ExpressionFactoryImpl<Row> implements ExpressionFactory<Row> {
-//    /** */
-//    private static final Map<String, Scalar> SCALAR_CACHE = new GridBoundedConcurrentLinkedHashMap<>(1024);
+    /** */
+    private static final int CACHE_SIZE = 1024;
+
+    /** */
+    private static final ConcurrentMap<String, Scalar> SCALAR_CACHE = Caffeine.newBuilder()
+        .maximumSize(CACHE_SIZE)
+        .<String, Scalar>build()
+        .asMap();
 
     /** */
     private final IgniteTypeFactory typeFactory;
@@ -119,7 +125,8 @@ public class ExpressionFactoryImpl<Row> implements ExpressionFactory<Row> {
             return null;
         else if (collation.getFieldCollations().size() == 1)
             return comparator(collation.getFieldCollations().get(0));
-        return Ordering.compound(collation.getFieldCollations()
+
+        return Commons.compoundComparator(collation.getFieldCollations()
             .stream()
             .map(this::comparator)
             .collect(Collectors.toList()));
@@ -136,7 +143,7 @@ public class ExpressionFactoryImpl<Row> implements ExpressionFactory<Row> {
         for (int i = 0; i < left.size(); i++)
             comparators.add(comparator(left.get(i), right.get(i)));
 
-        return Ordering.compound(comparators);
+        return Commons.compoundComparator(comparators);
     }
 
     /** */
@@ -241,7 +248,7 @@ public class ExpressionFactoryImpl<Row> implements ExpressionFactory<Row> {
 
     /** {@inheritDoc} */
     @Override public Scalar scalar(List<RexNode> nodes, RelDataType type) {
-        return compile(nodes, type);
+        return SCALAR_CACHE.computeIfAbsent(digest(nodes, type), k -> compile(nodes, type));
     }
 
     /** */
@@ -291,7 +298,7 @@ public class ExpressionFactoryImpl<Row> implements ExpressionFactory<Row> {
 
         MethodDeclaration decl = Expressions.methodDecl(
             Modifier.PUBLIC, void.class, IgniteMethod.SCALAR_EXECUTE.method().getName(),
-            ImmutableList.of(ctx_, in_, out_), builder.toBlock());
+            List.of(ctx_, in_, out_), builder.toBlock());
 
         return Commons.compile(Scalar.class, Expressions.toString(List.of(decl), "\n", false));
     }
